Added runtime error and compile error to code execution, and time taken to run the code
